individual/catholicon-ms-matchcard-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catholicon-ms-matchcard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catholicon-ms-matchcard
      version: v1
  template:
    metadata:
      labels:
        app: catholicon-ms-matchcard
        version: v1
    spec:
      containers:
        - name: catholicon-ms-matchcard
          image: rdomloge/catholicon-ms-matchcard-armv7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /matchcards/search/findByFixtureId?fixtureId=2168
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 300
