individual/catholicon-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catholicon
  namespace: catholicon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catholicon
      version: v1
  template:
    metadata:
      labels:
        app: catholicon
        version: v1
    spec:
      containers:
        - name: catholicon
          image: rdomloge/catholicon-multiarch
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "1000m"
              memory: "600Mi"
            limits:
              cpu: "1500m"
              memory: "750Mi"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /static/html/partials/frontPage.html
              port: 8080
            initialDelaySeconds: 100
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /frontpage/upcoming
              port: 8080
            initialDelaySeconds: 100
            periodSeconds: 30
          startupProbe:
            exec:
              command:
                - grep
                - 'Started ApplicationMain'
                - logs/catholicon.log
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 30
