individual/clubfixture-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catholicon-agg-clubfixture
  namespace: catholicon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catholicon-agg-clubfixture
      version: v1
  template:
    metadata:
      labels:
        app: catholicon-agg-clubfixture
        version: v1
    spec:
      containers:
        - name: catholicon-agg-clubfixture
          image: rdomloge/catholicon-agg-clubfixture
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "750m"
              memory: "256Mi"
          ports:
            - containerPort: 5000
          startupProbe:
            httpGet:
              path: /clubfixture?fixtureId=2361
              port: 5000
            initialDelaySeconds: 2
            periodSeconds: 2
            timeoutSeconds: 2
