individual/matchcard-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catholicon-ms-matchcard
  namespace: catholicon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catholicon-ms-matchcard
      version: v1
  template:
    metadata:
      labels:
        app: catholicon-ms-matchcard
        version: v1
    spec:
      containers:
        - name: matchcard-warmup
          image: rdomloge/mittens:arm64
          resources:
            limits:
              memory: 30Mi
              cpu: 50m
            requests:
              memory: 20Mi
              cpu: 50m
          readinessProbe:
            exec:
              command:
              - "cat"
              - "ready"
            initialDelaySeconds: 10
            periodSeconds: 30
          livenessProbe:
            exec:
              command:
              - "cat"
              - "alive"
            initialDelaySeconds: 10
            periodSeconds: 30
          args:
            - "--concurrency=3"
            - "--max-duration-seconds=120"
            - "--target-readiness-http-path=/actuator/health"
            - "--target-http-port=8080"
            - "--http-requests=get:/fixtures/search/findResultByExternalFixtureId?externalFixtureId=359"
            - "--http-requests=get:/fixtures/search/findByExternalFixtureId?externalFixtureId=353"
            - "--http-requests=get:/divisions/60/report?season=0"
            - "--http-requests=get:/divisions/1/report?season=2012"
            - "--http-requests=get:/fixtures/search/findUnconfirmedMatchcardsBySeason?season=2012"
        - name: catholicon-ms-matchcard
          lifecycle: #this is here to allow the pod to drain before it is stopped, to avoid errors (spotted during load test)
            postStart:
              exec:
                command:
                - sleep
                - "45"
            preStop:
              exec:
                command:
                - sleep
                - "10"
          image: rdomloge/catholicon-ms-matchcard-multiarch
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "1000m"
              memory: "800Mi"
            limits:
              cpu: "1500m"
              memory: "1000Mi"
          ports:
            - containerPort: 8080
            - containerPort: 8000
          livenessProbe: #to know when to restart a container.
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 300
          readinessProbe: #to know when a container is ready to start accepting traffic
            httpGet:
              path: /fixtures/search/countBySeason?season=0
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          startupProbe: #to know when a container application has started. If such a probe is configured, it disables liveness and readiness checks until it succeeds
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 25
            periodSeconds: 5
            failureThreshold: 30
