individual/postgres-pod.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: catholicon
spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      version: v1
  template:
    metadata:
      labels:
        app: postgres
        version: v1
    spec:
      containers:
        - name: postgres
          image: postgres
          args: ["-c", "log_min_duration_statement=100"]
          ports:
            - containerPort: 5432
