individual/seasons-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catholicon-ms-seasons
  namespace: catholicon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catholicon-ms-seasons
      version: v1
  template:
    metadata:
      labels:
        app: catholicon-ms-seasons
        version: v1
    spec:
      containers:
        - name: warmup
          image: rdomloge/mittens:arm64
          resources:
            limits:
              memory: 30Mi
              cpu: 150m
            requests:
              memory: 20Mi
              cpu: 150m
          readinessProbe:
            exec:
              command:
              - "cat"
              - "ready"
            initialDelaySeconds: 10
            periodSeconds: 30
          livenessProbe:
            exec:
              command:
              - "cat"
              - "alive"
            initialDelaySeconds: 10
            periodSeconds: 30
          args:
            - "--concurrency=3"
            - "--max-duration-seconds=120"
            - "--target-readiness-http-path=/actuator/health"
            - "--target-http-port=8080"
            - "--http-requests=get:/seasons?sort=seasonStartYear,desc"
            - "--http-requests=get:/seasons?sort=seasonStartYear,asc"
        - name: catholicon-ms-seasons
          image: rdomloge/catholicon-ms-seasons-multiarch
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "150m"
              memory: "650Mi"
            limits:
              cpu: "750m"
              memory: "750Mi"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/info
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          startupProbe:
            exec:
              command:
              - grep
              - 'Started CatholiconMsSeasonsApplication'
              - logs/ms-seasons.log
            failureThreshold: 30
            periodSeconds: 10
            initialDelaySeconds: 10
