individual/catholicon-ms-result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catholicon-ms-result-service
spec:
  selector:
    app: catholicon-ms-result
  ports:
    - protocol: TCP
      port: 83
      targetPort: 8080
