individual/club-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catholicon-ms-club-service
  namespace: catholicon
spec:
        #type: LoadBalancer
  selector:
    app: catholicon-ms-club
  ports:
    - protocol: TCP
      port: 85
      targetPort: 8080
  type: ClusterIP
