individual/clubfixture-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catholicon-agg-clubfixture-service
  namespace: catholicon
spec:
        #type: LoadBalancer
  selector:
    app: catholicon-agg-clubfixture
  ports:
    - protocol: TCP
      port: 85
      targetPort: 5000
  type: ClusterIP
