individual/function-bridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: function-bridge
  namespace: catholicon
spec:
  type: ExternalName
  externalName: gateway.openfaas.svc.cluster.local
  ports:
  - port: 8080
