individual/matchcard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catholicon-ms-matchcard-service
  namespace: catholicon
spec:
        #type: LoadBalancer
  selector:
    app: catholicon-ms-matchcard
  ports:
    - protocol: TCP
      port: 84
      targetPort: 8080
  type: ClusterIP
