individual/seasons-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catholicon-ms-seasons-service
  namespace: catholicon
spec:
  selector:
    app: catholicon-ms-seasons
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8080
  type: ClusterIP
