individual/sync-debug-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catholicon-ms-sync-debug-service
  namespace: catholicon
spec:
  type: LoadBalancer
  selector:
    app: catholicon-ms-sync
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
