individual/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catholicon-ingress
  namespace: catholicon
spec:
  rules:
    - host: my-server.10.0.0.12.xip.io
      http: &http_rules
        paths:
          - path: /clubfixture
            pathType: Prefix
            backend:
              service:
                name: catholicon-agg-clubfixture-service
                port: 
                  number: 83
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catholicon-service
                port: 
                  number: 800
          - path: /seasons
            pathType: Prefix
            backend:
              service:
                name: catholicon-ms-seasons-service
                port: 
                  number: 81
          - path: /unconfirmedResults
            pathType: Prefix
            backend:
              service:
                name: catholicon-ms-matchcard-service
                port: 
                  number: 84
          - path: /fixtures
            pathType: Prefix
            backend:
              service:
                name: catholicon-ms-matchcard-service
                port: 
                  number: 84
          - path: /divisions
            pathType: Prefix
            backend:
              service:
                name: catholicon-ms-matchcard-service
                port: 
                  number: 84
          - path: /clubs
            pathType: Prefix
            backend:
              service:
                name: catholicon-ms-club-service
                port: 
                  number: 85
    - host: rdomloge.entrydns.org
      http: *http_rules
    - host: rdomloge.synology.me
      http: *http_rules
    - host: catholicon.uk
      http: *http_rules
    - host: localhost
      http: *http_rules
